--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"lodash.debounce": "^4.0.8",
+		"lodash.throttle": "^4.1.1"
+	}
 }
